Enable hautelook_alice for dev

--- a/config/packages/hautelook_alice.yaml
+++ b/config/packages/hautelook_alice.yaml
@@ -1,3 +1,7 @@
+when@dev:
+    hautelook_alice:
+        fixtures_path: fixtures
+
 when@test:
     hautelook_alice:
         fixtures_path: fixtures
