Make dependencies explicit and add composer-require-checker to it target

--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,27 @@
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-zip": "*",
         "artgris/filemanager-bundle": "^2.10",
         "beberlei/doctrineextensions": "^1.5",
         "digitick/sepa-xml": "^1.6",
+        "doctrine/collections": "^2.4",
         "doctrine/dbal": "^3.10",
         "doctrine/doctrine-bundle": "^2.18",
         "doctrine/doctrine-migrations-bundle": "^3.7",
         "doctrine/orm": "^3.5",
+        "doctrine/persistence": "^4.1",
         "drewm/mailchimp-api": "^2.5",
         "egulias/email-validator": "^4.0",
         "erusev/parsedown": "^1.7",
         "excelwebzone/recaptcha-bundle": "^1.5",
         "friendsofsymfony/ckeditor-bundle": "^2.7",
         "friendsofsymfony/jsrouting-bundle": "^3.6",
+        "gedmo/doctrine-extensions": "^3.21",
+        "knplabs/knp-menu": "^3.8",
         "knplabs/knp-paginator-bundle": "^6.10",
         "league/html-to-markdown": "^5.1",
         "liip/imagine-bundle": "^2.15",
@@ -34,36 +39,49 @@
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpoffice/phpspreadsheet": "^1.30",
         "phpstan/phpdoc-parser": "^1.33",
+        "psr/log": "^3.0",
         "qipsius/tcpdf-bundle": "^2.0",
         "sonata-project/admin-bundle": "^4.41",
+        "sonata-project/block-bundle": "^5.4",
         "sonata-project/doctrine-orm-admin-bundle": "^4.19",
+        "sonata-project/form-extensions": "^2.7",
         "stof/doctrine-extensions-bundle": "^1.14",
         "symfony/asset": "7.4.*",
         "symfony/asset-mapper": "7.4.*",
         "symfony/console": "7.4.*",
+        "symfony/dependency-injection": "7.4.*",
+        "symfony/doctrine-bridge": "7.4.*",
         "symfony/doctrine-messenger": "7.4.*",
         "symfony/dotenv": "7.4.*",
         "symfony/event-dispatcher": "7.4.*",
         "symfony/expression-language": "7.4.*",
+        "symfony/filesystem": "7.4.*",
         "symfony/flex": "^2.10",
         "symfony/form": "7.4.*",
         "symfony/framework-bundle": "7.4.*",
         "symfony/http-client": "7.4.*",
+        "symfony/http-foundation": "7.4.*",
+        "symfony/http-kernel": "7.4.*",
         "symfony/intl": "7.4.*",
         "symfony/mailer": "7.4.*",
         "symfony/messenger": "7.4.*",
         "symfony/mime": "7.4.*",
         "symfony/monolog-bundle": "^3.11",
+        "symfony/options-resolver": "7.4.*",
+        "symfony/password-hasher": "7.4.*",
         "symfony/process": "7.4.*",
         "symfony/property-access": "7.4.*",
         "symfony/property-info": "7.4.*",
+        "symfony/routing": "7.4.*",
         "symfony/runtime": "7.4.*",
         "symfony/security-bundle": "7.4.*",
+        "symfony/security-core": "7.4.*",
         "symfony/security-http": "7.4.*",
         "symfony/serializer": "7.4.*",
         "symfony/stimulus-bundle": "^2.31",
         "symfony/string": "7.4.*",
         "symfony/translation": "7.4.*",
+        "symfony/translation-contracts": "3.6.*",
         "symfony/twig-bundle": "7.4.*",
         "symfony/ux-chartjs": "^2.31",
         "symfony/ux-dropzone": "^2.31",
