--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
         uses: actions/checkout@v5
       - name: Setup
         uses: ./.github/actions/setup/
+      - name: Make composer install
+        run: make composer/install
       - name: Run Controller Tests
         run: make test/controller
 
