--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup/
       - name: Make composer install
-        run: make composer/install
+        run: make composer/execute-autoscripts
       - name: Run Controller Tests
         run: make test/controller
 
